<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.bsrakdag.pootle.ProjectActivity$PlaceholderFragment"
    android:background="@drawable/backk">


    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="206dp"
            android:layout_gravity="center_horizontal|bottom">

            <Button
                android:layout_width="117dp"
                android:layout_height="79dp"
                android:id="@+id/button4"
                android:layout_gravity="center_horizontal|top"
                android:background="@drawable/right"
                android:textColor="@android:color/white" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="265dp"
            android:layout_height="161dp"
            android:layout_gravity="center_horizontal|top">

            <TextView
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:text="@string/languageproject"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal|bottom"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <ImageView
                android:layout_width="79dp"
                android:layout_height="79dp"
                android:id="@+id/imageView3"
                android:layout_gravity="center_horizontal|top"
                android:src="@drawable/language" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="178dp"
            android:layout_gravity="center">

            <Spinner
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:id="@+id/spinner_language"
                android:layout_gravity="right|top"
                android:prompt="@string/choose" />

            <Spinner
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:id="@+id/spinner_project"
                android:layout_gravity="right|center_vertical"
                android:prompt="@string/choose" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listlanguages"
                android:id="@+id/textView10"
                android:layout_gravity="left|top"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listprojects"
                android:id="@+id/textView11"
                android:layout_gravity="left|center_vertical"
                android:textColor="@android:color/white"
                android:textSize="20dp" />
        </FrameLayout>

    </FrameLayout>
</RelativeLayout>
