<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1" android:id="@+id/addserverid"
    android:background="@drawable/backk">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.12">

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="227dp"
        android:layout_weight="0.19">

        <FrameLayout
            android:layout_width="308dp"
            android:layout_height="191dp"
            android:layout_gravity="center_horizontal|bottom"
            android:visibility="visible"
            android:id="@+id/frameLayout"
            android:onClick="addservername"
            android:layout_weight="0.27" >

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top">

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="132dp"
                    android:layout_gravity="center_horizontal|bottom">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="34dp"
                        android:text="@string/servername"
                        android:id="@+id/textView6"
                        android:layout_gravity="left|top"
                        android:textSize="15dp"
                        android:textColor="@android:color/white"
                        android:clickable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:text="@string/servernickname"
                        android:id="@+id/textView8"
                        android:layout_gravity="left|center_vertical"
                        android:textSize="15dp"
                        android:textColor="@android:color/white"
                        android:clickable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:text="@string/username"
                        android:id="@+id/textView17"
                        android:layout_gravity="left|bottom"
                        android:textSize="15dp"
                        android:textColor="@android:color/white"
                        android:clickable="false" />

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/addservername"
                        android:layout_gravity="right|top" />

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/addservernickname"
                        android:layout_gravity="right|center_vertical" />

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/addserverusername"
                        android:layout_gravity="right|bottom" />
                </FrameLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top" >

            </FrameLayout>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="52dp"
                android:layout_gravity="right|bottom"
                android:weightSum="1">

                <TextView
                    android:layout_width="101dp"
                    android:layout_height="41dp"
                    android:text="@string/passwd"
                    android:id="@+id/textView18"
                    android:textSize="15dp"
                    android:textColor="@android:color/white"
                    android:layout_weight="0.57"
                    android:clickable="false" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/addserverpassword" />

            </TableRow>

        </FrameLayout>

        <FrameLayout
            android:layout_width="308dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:background="@drawable/abc">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="49dp"
                android:id="@+id/imageView2"
                android:layout_gravity="left|top" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/imageView6"
                android:layout_gravity="left|center_vertical"
                android:src="@drawable/addserver"
                android:clickable="false" />

            <TextView
                android:layout_width="257dp"
                android:layout_height="32dp"
                android:text="@string/addserver"
                android:id="@+id/textView16"
                android:layout_gravity="right|center_vertical"
                android:textColor="@android:color/white"
                android:clickable="false" />
        </FrameLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.45">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:layout_weight="0.43"
            android:visibility="visible"
            android:id="@+id/frameLayout2"
            android:layout_gravity="center">

            <FrameLayout
                android:layout_width="308dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:background="@drawable/abc"
                android:clickable="false">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="49dp"
                    android:id="@+id/imageView7"
                    android:layout_gravity="left|top" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:id="@+id/imageView8"
                    android:layout_gravity="left|center_vertical"
                    android:src="@drawable/removeserver" />

                <TextView
                    android:layout_width="257dp"
                    android:layout_height="32dp"
                    android:text="@string/removeserver"
                    android:id="@+id/textView9"
                    android:layout_gravity="right|center_vertical"
                    android:textColor="@android:color/white"
                    android:clickable="false" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="321dp"
                android:layout_height="66dp"
                android:layout_gravity="center_horizontal|bottom">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerservername"
                    android:layout_gravity="center"
                    android:background="@drawable/abc"
                    android:spinnerMode="dialog" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="New Text"
                    android:id="@+id/emptyservername"
                    android:layout_gravity="left|center_vertical"
                    android:visibility="invisible" />

            </FrameLayout>

        </FrameLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:onClick="removeserver"
            android:id="@+id/removeserverbutton"
            android:layout_gravity="center_horizontal|bottom"
            android:background="@android:color/transparent"
            android:textColor="@android:color/holo_blue_dark" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:text="@string/add"
            android:id="@+id/addserverbutton"
            android:layout_gravity="center_horizontal|top"
            android:background="@android:color/transparent"
            android:textColor="@android:color/holo_blue_dark" />

    </FrameLayout>
</LinearLayout>