<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/login_fragment"
    tools:context=".LoginPage$PlaceholderFragment"
    android:background="@drawable/backk"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="left|bottom">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="316dp"
                android:layout_gravity="center_horizontal|top">

                <FrameLayout
                    android:layout_width="301dp"
                    android:layout_height="158dp"
                    android:layout_gravity="center_horizontal|bottom" >

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:id="@+id/editTextUsername"
                        android:layout_gravity="right|top"
                        android:background="@drawable/abc"
                        android:textColor="@android:color/darker_gray" />

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/editTextPassword"
                        android:layout_gravity="right|center_vertical"
                        android:background="@drawable/abc"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="39dp"
                        android:text="@string/username"
                        android:id="@+id/textView"
                        android:layout_gravity="left|top"
                        android:textSize="16dp"
                        android:textIsSelectable="false"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="39dp"
                        android:text="@string/passwd"
                        android:id="@+id/textView2"
                        android:layout_gravity="left|center_vertical"
                        android:textSize="16dp"
                        android:textIsSelectable="false"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="39dp"
                        android:text="@string/server"
                        android:id="@+id/textView3"
                        android:layout_gravity="left|bottom"
                        android:textSize="16dp"
                        android:textIsSelectable="false"
                        android:textColor="@android:color/white" />

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:id="@+id/server"
                        android:layout_gravity="right|bottom"
                        android:background="@drawable/abc"
                        android:textColor="@android:color/darker_gray" />
                </FrameLayout>

                <ImageView
                    android:layout_width="94dp"
                    android:layout_height="94dp"
                    android:id="@+id/imageView"
                    android:layout_gravity="center_horizontal|top"
                    android:src="@drawable/pootle" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="247dp"
                android:layout_height="195dp"
                android:layout_gravity="right|bottom"
                >

                <Button
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:id="@+id/buttonlogin"
                    android:onClick="baglan"
                    android:layout_gravity="center_horizontal|top"
                    android:textColor="@android:color/white"
                    android:background="@android:color/transparent"
                    android:textSize="20dp" />

            </FrameLayout>

        </FrameLayout>

    </FrameLayout>

    </RelativeLayout>
